# combinatorial-algorithms

./: .gitignore
lw1_2/: CMakeLists.txt
lw1_2/generator/: CMakeLists.txt  main.cpp
lw1_2/qap/: CMakeLists.txt  input.in  main.cpp  readme.txt  test.sh
lw1_2/qap/tests/: test10.in  test3.in  test5.in
lw2_2/: CMakeLists.txt
lw2_2/knapsack/: CMakeLists.txt  input.txt  main.cpp  test.sh
lw3_2/: CMakeLists.txt
lw3_2(kos)/graph/: input.txt  input1.txt
lw3_2(kos)/graph/include/: Graph.h
lw3_2(kos)/graph/src/: Graph.cpp  main.cpp
lw3_2(kos)/graph/tests/: tests.cpp
lw3_2/graph/: CMakeLists.txt  input2.txt
lw3_2/graph/include/: Graph.h
lw3_2/graph/src/: Graph.cpp  main.cpp
lw3_2/graph/tests/: tests.cpp
lw4/: CMakeLists.txt
lw4/steiner/: CMakeLists.txt
lw4/steiner/assets/: input2.txt  input_c.txt  input_gex.txt
lw4/steiner/include/: DisjointSet.h  InputReader.h  Visualizer.h
lw4/steiner/src/: BoruvkaMST.cpp  SteinerTree.cpp  Visualizer.cpp  main.cpp
lw4/task/: CMakeLists.txt
lw4/task/assets/: input.txt  input_boundry_cross.txt  input_boundry_cross2  input_c.txt
lw4/task/include/: Boruvka.h  BoruvkaTree.h  Comparison.h  Constants.h  Edge.h  Exceptions.h  FileIO.h  Geometry.h  Graph.h  ITreeBuilder.h  InputParser.h  InputValidator.h  MstBoruvka.h  Point.h  Repository.h  SteinerSolver.h  SteinerTree.h  TreeTypes.h  Visualizer.h
lw4/task/include/steiner_lab/: boruvka.h  comparison_math.h  constants.h  euclidean_steiner.h  exceptions.h  file_io.h  geometry.h  graphviz_export.h  input_parser.h  input_validator.h
lw4/task/src/: Boruvka.cpp  BoruvkaTree.cpp  Edge.cpp  FileIO.cpp  Geometry.cpp  Graph.cpp  InputParser.cpp  InputValidator.cpp  MstBoruvka.cpp  Point.cpp  Repository.cpp  SteinerSolver.cpp  SteinerTree.cpp  Visualizer.cpp  boruvka.cpp  euclidean_steiner.cpp  file_io.cpp  geometry.cpp  graphviz_export.cpp  input_parser.cpp  input_validator.cpp  main.cpp
lw4/task/tests/: tests.cpp
lw4/task2/: CMakeLists.txt
lw4/task2/assets/: input.txt
lw4/task2/include/: BoruvkaMST.h  Edge.h  Geometry.h  Graph.h  Point.h  SteinerTree.h
lw4/task2/src/: DisjointSet.cpp  Geometry.cpp  Graph.cpp  InputReader.cpp  Point.cpp  SteinerTree.cpp  Visualizer.cpp
lw4/task2/tests/: tests.cpp
lw5/: CMakeLists.txt
lw5/generator/: CMakeLists.txt  main.cpp
lw5/genetic/: CMakeLists.txt
lw5/genetic/assets/: input.txt
lw5/genetic/include/: CBruteForceSolver.h  CFileLoader.h  CGeneticSolver.h  ISolver.h  utils.h
lw5/genetic/src/: CBruteForceSolver.cpp  CFileLoader.cpp  CGeneticSolver.cpp  main.cpp  utils.cpp
lw5/genetic/tests/: tests.cpp
lw6/HopcroftKarp/: .editorconfig  HopcroftKarp.sln
lw6/HopcroftKarp/HopcroftKarp/: BipartiteGraph.cs  ChainFinder.cs  HopcroftKarp.csproj  HopcroftKarpMatcher.cs  Matching.cs  Program.cs  input.txt
lw6/HopcroftKarp/HopcroftKarp/UI/: IConsole.cs  IOConsole.cs
lw6/HopcroftKarp/HopcroftKarpTest/: BipartiteGraphTests.cs  HopcroftKarpMatcherTests.cs  HopcroftKarpTest.csproj
